@@ -1061,13 +1061,8 @@ described in <a href="#MaskValues">Calculating mask values</a>.</p>
         class="adef">x</span> = "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"</dt>
         <dd>The x-axis coordinate of one corner of the rectangle
         for the largest possible offscreen buffer.
-        <p class="note">Note that the
-        clipping path used to render any graphics within the mask
-        will consist of the intersection of the current clipping
-        path associated with the given object and the rectangle
-        defined by 
-        <a>'mask/x'</a>, <a>'mask/y'</a>, <a>'mask/width'</a> and <a>'mask/height'</a>.</p>
-         If the attribute is not specified, the effect is as if a
+        If the attribute is not specified but at least one of the attributes <a>'mask/y'</a>,
+        <a>'mask/width'</a> or <a>'mask/height'</a> are specified, the effect is as if a
         value of <span class='attr-value'>'-10%'</span> were specified.<br />
          <span class="anim-target">Animatable:
         yes.</span></dd>
@@ -1075,20 +1070,17 @@ described in <a href="#MaskValues">Calculating mask values</a>.</p>
         class="adef">y</span> = "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"</dt>
         <dd>The y-axis coordinate of one corner of the rectangle
         for the largest possible offscreen buffer.<br />
-         If the attribute is not specified, the effect is as if a
+        If the attribute is not specified but at least one of the attributes <a>'mask/x'</a>,
+        <a>'mask/width'</a> or <a>'mask/height'</a> are specified, the effect is as if a
         value of <span class='attr-value'>'-10%'</span> were specified.<br />
-         <span class="anim-target">Animatable:
+        <span class="anim-target">Animatable:
         yes.</span></dd>
         <dt id="MaskElementWidthAttribute"><span
         class="adef">width</span> = "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"</dt>
         <dd>The width of the largest possible offscreen buffer.
-        <p class="note">Note that the clipping path used to render any graphics
-        within the mask will consist of the intersection of the
-        current clipping path associated with the given object and
-        the rectangle defined by
-        <a>'mask/x'</a>, <a>'mask/y'</a>, <a>'mask/width'</a> and <a>'mask/height'</a>.<p/>
         A negative value or a value of zero disables rendering of the element.<br />
-         If the attribute is not specified, the effect is as if a
+        If the attribute is not specified but at least one of the attributes <a>'mask/x'</a>,
+        <a>'mask/y'</a> or <a>'mask/height'</a> are specified, the effect is as if a
         value of <span class='attr-value'>'120%'</span> were specified.<br />
          <span class="anim-target">Animatable:
         yes.</span></dd>
@@ -1096,13 +1088,20 @@ described in <a href="#MaskValues">Calculating mask values</a>.</p>
         class="adef">height</span> = "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"</dt>
         <dd>The height of the largest possible offscreen
         buffer.<br />
-         A negative value or a value of zero disables rendering of the element.<br />
-         If the attribute is not specified, the effect is as if a
+        A negative value or a value of zero disables rendering of the element.<br />
+        If the attribute is not specified but at least one of the attributes <a>'mask/x'</a>,
+        <a>'mask/y'</a> or <a>'mask/width'</a> are specified, the effect is as if a
         value of <span class='attr-value'>'120%'</span> were specified.<br />
          <span class="anim-target">Animatable:
         yes.</span></dd>
       </dl>
     </div>
+<p class="note">Note that if at least one of the attributes <a>'mask/x'</a>,
+<a>'mask/y'</a>, <a>'mask/width'</a> or <a>'mask/height'</a> are specified,
+the given object and the rectangle defined by
+<a>'mask/x'</a>, <a>'mask/y'</a>, <a>'mask/width'</a> and <a>'mask/height'</a>
+associated a current clipping path. The rendered content of the mask must be clipped
+by this current clipping path.<p/>
 
 <p>CSS properties inherit into the
 <a>'mask element'</a> element from its ancestors; properties do <em>not</em>
