@@ -2011,20 +2011,15 @@ body {
      "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"
 
     <dd>The x-axis coordinate of one corner of the rectangle for the largest
-     possible offscreen buffer.
-     <p class=note>Note that the clipping path used to render any graphics
-      within the mask will consist of the intersection of the current
-      clipping path associated with the given object and the rectangle
-      defined by <a class=attr-name href="#MaskElementXAttribute">‘<code
-      class=property>x</code>’</a>, <a class=attr-name
-      href="#MaskElementYAttribute">‘<code class=property>y</code>’</a>,
-      <a class=attr-name href="#MaskElementWidthAttribute">‘<code
-      class=property>width</code>’</a> and <a class=attr-name
-      href="#MaskElementHeightAttribute">‘<code
-      class=property>height</code>’</a>.</p>
-     If the attribute is not specified, the effect is as if a value of <span
-     class=attr-value>‘<code class=css>-10%</code>’</span> were
-     specified.<br>
+     possible offscreen buffer. If the attribute is not specified but at
+     least one of the attributes <a class=attr-name
+     href="#MaskElementYAttribute">‘<code class=property>y</code>’</a>,
+     <a class=attr-name href="#MaskElementWidthAttribute">‘<code
+     class=property>width</code>’</a> or <a class=attr-name
+     href="#MaskElementHeightAttribute">‘<code
+     class=property>height</code>’</a> are specified, the effect is as if a
+     value of <span class=attr-value>‘<code class=css>-10%</code>’</span>
+     were specified.<br>
      <span class=anim-target>Animatable: yes.</span>
 
     <dt id=MaskElementYAttribute><span class=adef>y</span> =
@@ -2032,32 +2027,31 @@ body {
 
     <dd>The y-axis coordinate of one corner of the rectangle for the largest
      possible offscreen buffer.<br>
-     If the attribute is not specified, the effect is as if a value of <span
-     class=attr-value>‘<code class=css>-10%</code>’</span> were
-     specified.<br>
+     If the attribute is not specified but at least one of the attributes <a
+     class=attr-name href="#MaskElementXAttribute">‘<code
+     class=property>x</code>’</a>, <a class=attr-name
+     href="#MaskElementWidthAttribute">‘<code
+     class=property>width</code>’</a> or <a class=attr-name
+     href="#MaskElementHeightAttribute">‘<code
+     class=property>height</code>’</a> are specified, the effect is as if a
+     value of <span class=attr-value>‘<code class=css>-10%</code>’</span>
+     were specified.<br>
      <span class=anim-target>Animatable: yes.</span>
 
     <dt id=MaskElementWidthAttribute><span class=adef>width</span> =
      "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"
 
-    <dd>The width of the largest possible offscreen buffer.
-     <p class=note>Note that the clipping path used to render any graphics
-      within the mask will consist of the intersection of the current
-      clipping path associated with the given object and the rectangle
-      defined by <a class=attr-name href="#MaskElementXAttribute">‘<code
-      class=property>x</code>’</a>, <a class=attr-name
-      href="#MaskElementYAttribute">‘<code class=property>y</code>’</a>,
-      <a class=attr-name href="#MaskElementWidthAttribute">‘<code
-      class=property>width</code>’</a> and <a class=attr-name
-      href="#MaskElementHeightAttribute">‘<code
-      class=property>height</code>’</a>.
-
-     <p> A negative value or a value of zero disables rendering of the
-      element.<br>
-      If the attribute is not specified, the effect is as if a value of <span
-      class=attr-value>‘<code class=css>120%</code>’</span> were
-      specified.<br>
-      <span class=anim-target>Animatable: yes.</span>
+    <dd>The width of the largest possible offscreen buffer. A negative value
+     or a value of zero disables rendering of the element.<br>
+     If the attribute is not specified but at least one of the attributes <a
+     class=attr-name href="#MaskElementXAttribute">‘<code
+     class=property>x</code>’</a>, <a class=attr-name
+     href="#MaskElementYAttribute">‘<code class=property>y</code>’</a> or
+     <a class=attr-name href="#MaskElementHeightAttribute">‘<code
+     class=property>height</code>’</a> are specified, the effect is as if a
+     value of <span class=attr-value>‘<code class=css>120%</code>’</span>
+     were specified.<br>
+     <span class=anim-target>Animatable: yes.</span>
 
     <dt id=MaskElementHeightAttribute><span class=adef>height</span> =
      "<var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var>"
@@ -2065,12 +2059,38 @@ body {
     <dd>The height of the largest possible offscreen buffer.<br>
      A negative value or a value of zero disables rendering of the
      element.<br>
-     If the attribute is not specified, the effect is as if a value of <span
-     class=attr-value>‘<code class=css>120%</code>’</span> were
-     specified.<br>
+     If the attribute is not specified but at least one of the attributes <a
+     class=attr-name href="#MaskElementXAttribute">‘<code
+     class=property>x</code>’</a>, <a class=attr-name
+     href="#MaskElementYAttribute">‘<code class=property>y</code>’</a> or
+     <a class=attr-name href="#MaskElementWidthAttribute">‘<code
+     class=property>width</code>’</a> are specified, the effect is as if a
+     value of <span class=attr-value>‘<code class=css>120%</code>’</span>
+     were specified.<br>
      <span class=anim-target>Animatable: yes.</span>
    </dl>
   </div>
+
+  <p class=note>Note that if at least one of the attributes <a
+   class=attr-name href="#MaskElementXAttribute">‘<code
+   class=property>x</code>’</a>, <a class=attr-name
+   href="#MaskElementYAttribute">‘<code class=property>y</code>’</a>, <a
+   class=attr-name href="#MaskElementWidthAttribute">‘<code
+   class=property>width</code>’</a> or <a class=attr-name
+   href="#MaskElementHeightAttribute">‘<code
+   class=property>height</code>’</a> are specified, the given object and
+   the rectangle defined by <a class=attr-name
+   href="#MaskElementXAttribute">‘<code class=property>x</code>’</a>, <a
+   class=attr-name href="#MaskElementYAttribute">‘<code
+   class=property>y</code>’</a>, <a class=attr-name
+   href="#MaskElementWidthAttribute">‘<code
+   class=property>width</code>’</a> and <a class=attr-name
+   href="#MaskElementHeightAttribute">‘<code
+   class=property>height</code>’</a> associated a current clipping path.
+   The rendered content of the mask must be clipped by this current clipping
+   path.
+
+  <p>
 
   <p>CSS properties inherit into the <a class=element-name
    href="#MaskElement">‘<code class=property>mask</code>’</a> element
