@@ -1,4 +1,7 @@
-2013-03-01  Dirk Schulze  <dschulze@adobe.com>
+2013-03-08  Dirk Schulze  <dschulze@adobe.com>
+	Introduce unclipped masks for 'mask' element.
+
+2013-03-07  Dirk Schulze  <dschulze@adobe.com>
 	Style changes.
 
 2013-03-01  Dirk Schulze  <dschulze@adobe.com>
